--- a/argo/rbac.yaml
+++ b/argo/rbac.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-    namespace: argo
+    namespace: argo-wf
     name: executor
 rules:
   - apiGroups:
