--- a/argo/new_func/params.yaml
+++ b/argo/new_func/params.yaml
@@ -1,3 +1,3 @@
-minio_url: 10.97.128.159
-minio_user: 29SJ9EX057WITLVE41OA
-minio_pass: a4EhEKHsUIoG4trgMaZNItAch3VMSBUVLmoH9HTx
+minio_url: 10.101.23.65
+minio_user: P02WXEZXZCSBM1SG3P3S
+minio_pass: JnHNJFesHzC1IxLyKS9VlRiurHMuLI9OagSR6JZY
